Insert content to post content and fixed overlap

--- a/resources/css/custom-style/_shared-styles.scss
+++ b/resources/css/custom-style/_shared-styles.scss
@@ -88,9 +88,9 @@
   z-index: 1;
 }
 
-.post-title {
-  margin-top: -50px;
-  z-index: 15; 
+.post-content {
+  z-index: 2;
+  margin-top:-150px;
 }
 // --------------------------------
 
